--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,7 +11,7 @@ permalink: /index.html
   >
     <div class="w-full pb-24 text-center md:pb-32">
       <h1
-        class="mb-8 text-2xl font-bold text-white italic md:mb-10 md:text-3xl"
+        class="mb-8 text-2xl font-extrabold text-white italic md:mb-10 md:text-3xl"
       >
         Enthusiast Edge
       </h1>
